<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_citizen_background"
    tools:context=".citizen.userManagement.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="284dp"
        android:layout_height="221dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_citizen_login_picture" />

    <Button
        android:id="@+id/loginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/ic_login_btn"
        android:foreground="@drawable/ic_login_btn"
        android:text="@string/citizen_login_login_btn"
        android:textColor="#070000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="175dp"
        android:layout_height="61dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/citizen_title_line_1"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="93dp"
        android:layout_height="41dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/citizen_title_line_2"
        android:textColor="#F26421"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="84dp"
        android:layout_height="42dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/citizen_login_login"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_register_btn"
        android:contentDescription="@string/Regiter"
        android:foreground="@drawable/ic_register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="24dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/citizen_login_divider"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLogin" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_citizen_input_big"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:hint="@string/citizen_login_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nicLogin" />

    <EditText
        android:id="@+id/nicLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="@drawable/ic_email"
        android:ems="10"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:hint="@string/citizen_login_nic"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>