<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mad.divamp.admin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_infection"
        android:name="com.mad.divamp.admin.ui.infections.InfectionsFragment"
        android:label="@string/mark_infection"
        tools:layout="@layout/fragment_mark_infections" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.mad.divamp.admin.ui.history.HistoryFragment"
        android:label="@string/individual_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_vaccine_registration"
        android:name="com.mad.divamp.admin.ui.registration.RegistrationFragment"
        android:label="V-Center Registration"
        tools:layout="@layout/fragment_registration" />
    <fragment
        android:id="@+id/nav_center_list"
        android:name="com.mad.divamp.admin.ui.centerlist.CenterListFragment"
        android:label="Vaccination Center List"
        tools:layout="@layout/center_list_fragment" />
</navigation>