<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_citizen_background"
    tools:context=".citizen.userManagement.Register3Activity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/citizen_self_registration"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/citizen_title_line_2"
        android:textColor="#F26421"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/yantramanav_bold"
        android:text="@string/citizen_title_line_1"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reg3_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_registration_3_back_image" />

    <Button
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_login_now"
        android:foreground="@drawable/ic_login_now"
        android:text="@string/citizen_login_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>